on scroll animation

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                     <h1>Light up your life</h1>
                 </div>
             </div>
-
-
-            <section class="candle-section animated">
+            <section class="candle-section-head">
                 <div class="candle-text">
                     Lorem ipsum dolor sit amet consectetur. Pellentesque velit duis enim porta neque. Feugiat leo dui
                     libero tortor volutpat tortor porttitor habitasse.
