remove touch freezee

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <model-viewer class="model" src="./media/assets/Astronaut.glb" ar
                         ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" disable-pan
                         disable-zoom shadow-softness="1" auto-rotate camera-orbit="-25.03deg 86.04deg 9006m"
-                        field-of-view="30deg" touch-action="none" interaction-prompt="none">
+                        field-of-view="30deg" touch-action="pan-y" interaction-prompt="none">
 
                         <button class="Hotspot" slot="hotspot-3" data-surface="0 0 3351 3352 3353 0.629 0.305 0.066"
                             data-visibility-attribute="visible">
