--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                         <model-viewer class="model" src="./media/assets/Astronaut.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls
                          shadow-intensity="2" disable-pan disable-zoom
                         shadow-softness="1" auto-rotate camera-orbit="-25.03deg 86.04deg 9006m" field-of-view="30deg"
+                        min-camera-orbit="auto 84deg auto" max-camera-orbit="auto 84deg auto"
                         touch-action="none" interaction-prompt="none" >
                     </model-viewer>
                     </div>
