--- a/index.html
+++ b/index.html
@@ -146,6 +146,26 @@
                 vitae. Arcu nibh bibendum venenatis adipiscing aliquet.
             </div>
         </section>
+        <section class="about">
+            <h4>About us</h4>
+            <div class="content">
+                <div class="profile">
+                <div class="photo">
+                    <img src="./media/profile.png" alt="Author 1">
+                </div>
+                <span>Name Surname</span>
+                <p>Some description about first author of this startup</p>
+            </div>
+            <div class="profile">
+                <div class="photo">
+                    <img src="./media/profile.png" alt="Author 2">
+                </div>
+                <span>Name Surname</span>
+                <p>Some description about first author of this startup</p>
+            </div>
+            </div>
+            
+        </section>
         <section class="day-night">
             <div class="text-content">
                 <h4>Long lasting light</h4>
