--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script>
+    <link rel="shortcut icon" href="./media/logo.svg" type="image/x-icon"> 
     <title>Candle</title>
 </head>
 
@@ -123,7 +124,11 @@
                 <h3>Why this candle?</h3>
             </div>
             <div class="section-content">
-                <div class="phone"><img src="./media/Silver.png" alt=""></div>
+                <div class="phone">
+                    <div class="toclick"></div>
+                    <img class="logo" src="./media/logo.svg" alt="" srcset="">
+                    <img src="./media/Silver.png" alt="">
+                </div>
                 <div class="content">
                     <h4>App for remote control</h4>
                     Lorem ipsum dolor sit amet consectetur. Eget pulvinar blandit nibh ac purus nulla consectetur id
