--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                     Lorem ipsum dolor sit amet consectetur. Pellentesque velit duis enim porta neque. Feugiat leo dui
                     libero tortor volutpat tortor porttitor habitasse.
                 </div>
+                <img class="logo" src="./media/black.svg" alt="" srcset="">
+
                 <div class="wix-img wix-img-anim">
                     <model-viewer class="model" src="./media/assets/Candle_with_glass.glb" ar
                         ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" exposure="0.21"
@@ -126,7 +128,6 @@
             <div class="section-content">
                 <div class="phone">
                     <div class="toclick"></div>
-                    <img class="logo" src="./media/logo.svg" alt="" srcset="">
                     <img src="./media/Silver.png" alt="">
                 </div>
                 <div class="content">
@@ -144,11 +145,17 @@
                 </div>
             </div>
             <div class="continue-section">
-                <h4>Eco-friendly product</h4>
+                <div class="left">
+                    <h4>Eco-friendly product</h4>
                 Lorem ipsum dolor sit amet consectetur. Eget pulvinar blandit nibh ac purus nulla consectetur id velit.
                 Ut aliquam nunc urna fringilla amet mattis. Curabitur posuere suspendisse in sem. A semper nisl dictumst
                 tortor nibh. Sagittis libero et hendrerit sed orci. Phasellus vulputate mi sem amet molestie feugiat
                 vitae. Arcu nibh bibendum venenatis adipiscing aliquet.
+                </div>
+                <div class="right">
+                    <img class="logo" src="./media/black.svg" alt="" srcset="">
+                </div>
+                
             </div>
         </section>
         <section class="about">
