--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     Lorem ipsum dolor sit amet consectetur. Pellentesque velit duis enim porta neque. Feugiat leo dui
                     libero tortor volutpat tortor porttitor habitasse.
                 </div>
-                <img class="logo" src="./media/black.svg" alt="" srcset="">
+                <img class="logo" src="./media/logo.png" alt="" srcset="">
 
                 <div class="wix-img wix-img-anim">
                     <model-viewer class="model" src="./media/assets/Candle_with_glass.glb" ar
@@ -153,7 +153,7 @@
                 vitae. Arcu nibh bibendum venenatis adipiscing aliquet.
                 </div>
                 <div class="right">
-                    <img class="logo" src="./media/black.svg" alt="" srcset="">
+                    <img class="logo" src="./media/logo.png" alt="" srcset="">
                 </div>
                 
             </div>
