--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="candle-text">
                     Lorem ipsum dolor sit amet consectetur. Pellentesque velit duis enim porta neque. Feugiat leo dui
                     libero tortor volutpat tortor porttitor habitasse.
-                </div>
-                <img class="logo" src="./media/logo.png" alt="" srcset="">
+                </div><!-- 
+                <img class="logo" src="./media/logo.png" alt="" srcset=""> -->
 
                 <div class="wix-img wix-img-anim">
                     <model-viewer class="model" src="./media/assets/Candle_with_glass.glb" ar
@@ -161,6 +161,9 @@
         <section class="about">
             <h4>About us</h4>
             <div class="content">
+                <img src="./media/logo.png" alt="" class="logo">
+                <img src="./media/logo.png" alt="" class="logo second">
+                <img src="./media/logo.png" alt="" class="logo third">
                 <div class="profile">
                 <div class="photo">
                     <img src="./media/profile.png" alt="Author 1">
