fix for different screens

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
                 <div class="candle-text">
                     Lorem ipsum dolor sit amet consectetur. Pellentesque velit duis enim porta neque. Feugiat leo dui
                     libero tortor volutpat tortor porttitor habitasse.
-                </div><!-- 
-                <img class="logo" src="./media/logo.png" alt="" srcset=""> -->
-
+                </div>
                 <div class="wix-img wix-img-anim">
                     <model-viewer class="model" src="./media/assets/Candle_with_glass.glb" ar
                         ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" exposure="0.21"
@@ -153,7 +151,6 @@
                 vitae. Arcu nibh bibendum venenatis adipiscing aliquet.
                 </div>
                 <div class="right">
-                    <img class="logo" src="./media/logo.png" alt="" srcset="">
                 </div>
                 
             </div>
@@ -161,9 +158,6 @@
         <section class="about">
             <h4>About us</h4>
             <div class="content">
-                <img src="./media/logo.png" alt="" class="logo">
-                <img src="./media/logo.png" alt="" class="logo second">
-                <img src="./media/logo.png" alt="" class="logo third">
                 <div class="profile">
                 <div class="photo">
                     <img src="./media/profile.png" alt="Author 1">
@@ -210,10 +204,6 @@
                 <p>2023 All rights reserved</p>
             </div>
         </section>
-        <!-- <footer>
-            <p>Brand name</p>
-            <p>2023 All rights reserved</p>
-        </footer> -->
     </div>
 </body>
 <script src="./scripts/index.js" type="module"></script>
