--- a/index.html
+++ b/index.html
@@ -134,12 +134,14 @@
                             <div class="notifications">
                                 <i class="fa-regular fa-bell" style="color: #ffffff;"></i>
                             </div>
+                            <div class="glow-outer"></div>
                             <div class="model-view">
-                                <model-viewer id="phone-view" class="model" src="./media/assets/Candle fire animation.glb"  ar
+                                <model-viewer id="phone-view" class="model" src="./media/assets/Candle (2).gltf"  ar
                                 ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" exposure="0.21"
                                 disable-pan disable-zoom shadow-softness="1" camera-orbit="-25.03deg 86.04deg 9006m"
-                                auto-rotate-delay="0" min-camera-orbit="105deg 84deg auto" max-camera-orbit="135deg 84deg auto"
-                                interpolation-decay="300" field-of-view="30deg" touch-action="none" interaction-prompt="none">
+                                auto-rotate-delay="0"  min-camera-orbit="105deg 84deg auto" max-camera-orbit="135deg 84deg auto"
+                                interpolation-decay="300" field-of-view="30deg" touch-action="none" interaction-prompt="none"
+                                environment-image="./media/assets/lightroom_14b.hdr">
                             </model-viewer>
                             </div>
                             <div class="progress-bar">
