fix phone model, day-night anim

--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="tools-bar">
-                            <i class="fa-solid fa-house"></i>
-                            <i id="power_button" class="fa-solid fa-power-off"></i>
-                            <i class="fa-solid fa-gear"></i>
-                        </div>
                     </div>
-                    <img src="./media/Silver.png" alt="">
+                    <div class="tools-bar">
+                        <i class="fa-solid fa-house"></i>
+                        <i id="power_button" class="fa-solid fa-power-off"></i>
+                        <i class="fa-solid fa-gear"></i>
+                    </div>
+                    <img src="./media/iphone3.png" alt="">
                 </div>
                 <div class="content">
                     <h4>App for remote control</h4>
